<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.mcsully</groupId>
   <artifactId>java</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>pom</packaging>

   <properties>
      <java.version>1.8</java.version>
      <!-- java.version>1.9</java.version -->
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.jupiter.version>5.1.0</junit.jupiter.version>
		<junit.platform.version>1.1.0</junit.platform.version>
   </properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<!-- compilerArguments -->
						<!-- Xlint:unchecked / -->
					<!-- /compilerArguments -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
<!-- ROLL BACK.  Ref https://github.com/junit-team/junit5/issues/809#issuecomment-380972790 -->
				<!-- version>2.21.0</version -->
				<version>2.19.1</version>
  				<configuration>
    				<forkCount>3</forkCount>
               <threadCount>3</threadCount>
    				<reuseForks>true</reuseForks>
    				<!-- OLD: argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine -->
  				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.1.0</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

   <modules>
    <!-- module>introduction</module -->
    <!-- module>big-number</module -->
    <module>challenges</module>
    <!-- module>chaos</module -->
    <!-- module>data-structures</module -->
    <!-- module>exceptions</module -->
    <!-- module>oo</module -->
    <!-- module>strings</module -->
    <!-- module>advanced</module -->
  </modules>

</project>
